Fix API routing and adjust frontend

--- a/web/main page/app.html
+++ b/web/main page/app.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>ROAM – AI Text Adventure</title>
 
-    <link rel="stylesheet" href="styleguide.css" />
+    <!-- Static assets are served under /static -->
+    <link rel="stylesheet" href="/static/styleguide.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap"
       rel="stylesheet"
