--- a/web/main page/app.html
+++ b/web/main page/app.html
@@ -1380,7 +1380,8 @@
         if (from === "assistant") {
           assistantCount++;
         }
-        if (att.childElementCount) wrap.appendChild(att);
+        // always insert the attachments container so tools can add pills later
+        wrap.appendChild(att);
 
         const bubble = document.createElement("div");
         bubble.className = "bubble";
@@ -1456,11 +1457,8 @@
         const bubble = el.querySelector(".bubble");
         const dec = new TextDecoder();
         let buffer = "";
-        let chain = Promise.resolve();
-        const enqueue = (txt) => {
-          chain = chain.then(() => streamText(bubble, txt, { speed: 40 }));
-          el.dataset.rawText += txt;
-        };
+        let fullText = "";
+        bubble.textContent = "";
 
         while (true) {
           const { value, done } = await reader.read();
@@ -1472,7 +1470,8 @@
               if (!part.trim()) continue;
               const data = JSON.parse(part);
               if (data.content !== undefined) {
-                enqueue(data.content);
+                fullText += data.content;
+                bubble.textContent += data.content;
                 if (autoStick) scrollToBottom("auto", GAP_BELOW_LATEST);
               }
               if (data.tool) {
@@ -1482,7 +1481,8 @@
           }
           if (done) break;
         }
-        await chain;
+        el.dataset.rawText = fullText;
+        bubble.innerHTML = marked.parse(fullText, { gfm: true, breaks: true }).trim();
         el.classList.remove("streaming");
         promptInput.disabled = false;
         sendBtn.disabled = false;
